fix: allow y axis scroll on overflow

--- a/src/App.css
+++ b/src/App.css
@@ -108,5 +108,6 @@ html {
 .App {
   max-width: 100vw;
   max-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
